--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>To Do List</title>
-  <link rel="stylesheet" href="css/styles.css">
-</head>
+<%- include('header'); -%>
 
 <body>
   <div class="box" id="heading">
-    <h1> <%= kindOfDay %> </h1>
+    <h1> <%= listTitle %> </h1>
   </div>
 
   <div class="box" id="">
@@ -22,7 +17,7 @@
     <% } %>
     <form class="item" action="/" method="POST">
       <input type='text' name='newItem' placeholder="New Item" autocomplete="off">
-      <button type='submit' name='button'>+</button>
+      <button type='submit' name='list' value=<%= listTitle %>>+</button>
     </form>
   </div>
 
